src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Product_Selection__c</fullName>
        <label>Product Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Foundry</fullName>
                </value>
                <value>
                    <fullName>MADlib</fullName>
                </value>
                <value>
                    <fullName>Pivotal App Suite</fullName>
                </value>
                <value>
                    <fullName>Pivotal Big Data Suite</fullName>
                </value>
                <value>
                    <fullName>Pivotal CF</fullName>
                </value>
                <value>
                    <fullName>Pivotal Chorus</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Dispatch</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Labs</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Tools</fullName>
                </value>
                <value>
                    <fullName>Pivotal DCA</fullName>
                </value>
                <value>
                    <fullName>Pivotal GemFire</fullName>
                </value>
                <value>
                    <fullName>Pivotal GPText</fullName>
                </value>
                <value>
                    <fullName>Pivotal Greenplum DB</fullName>
                </value>
                <value>
                    <fullName>Pivotal HD</fullName>
                </value>
                <value>
                    <fullName>Pivotal One</fullName>
                </value>
                <value>
                    <fullName>Pivotal RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Pivotal SQLFire</fullName>
                </value>
                <value>
                    <fullName>Pivotal tc Server</fullName>
                </value>
                <value>
                    <fullName>Pivotal Web Server</fullName>
                </value>
                <value>
                    <fullName>Redis</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>vFabric Suite</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>Containers</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product: Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Date__c</fullName>
        <label>RPS Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RPS_Status__c</fullName>
        <defaultValue>"Pending"</defaultValue>
        <label>RPS Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Contact__c</fullName>
        <inlineHelpText>Why did this person contact us?</inlineHelpText>
        <label>Reason for Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Press/Analyst</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Job Opportunities</fullName>
                </value>
                <value>
                    <fullName>Customer Activities</fullName>
                </value>
                <value>
                    <fullName>Analytics Workbench</fullName>
                </value>
                <value>
                    <fullName>OSS Support</fullName>
                </value>
                <value>
                    <fullName>Pivotal Tracker</fullName>
                </value>
                <value>
                    <fullName>Pivotal Labs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_to_title__c</fullName>
        <inlineHelpText>What is the title the person this contact reports to?</inlineHelpText>
        <label>Reports to (Title)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <description>Marketing field</description>
        <label>SFDC Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Secondary_Campaign_ID__c</fullName>
        <description>Marketing field</description>
        <label>SFDC Secondary Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Download_Name__c</fullName>
        <label>SW Download Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Requested_Marketing_Suspend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3/26 sales requested - will suspend marketing outreach to contact selected</description>
        <inlineHelpText>Check this box to suspend all marketing outreach to this contact</inlineHelpText>
        <label>Sales Requested Marketing Suspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Services_Product_Interest__c</fullName>
        <label>Services Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pivotal Labs</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Science Labs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_Creation__c</fullName>
        <label>Source of Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce UI</fullName>
                    <default>true</default>
                    <label>Salesforce UI</label>
                </value>
                <value>
                    <fullName>JIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_of_Opportunity__c</fullName>
        <description>For deal registration via Marketo, the stage of the opp in the source system</description>
        <label>Stage of Opportunity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>C-Suite</fullName>
                </value>
                <value>
                    <fullName>Data Analytics DB</fullName>
                </value>
                <value>
                    <fullName>Data Wharehouse</fullName>
                </value>
                <value>
                    <fullName>Groovy / Grails</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>MPP Data Platform</fullName>
                </value>
                <value>
                    <fullName>Other No SQL Data</fullName>
                </value>
                <value>
                    <fullName>Product Owner / Manager</fullName>
                </value>
                <value>
                    <fullName>RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>RDBMS</fullName>
                </value>
                <value>
                    <fullName>Redis</fullName>
                </value>
                <value>
                    <fullName>Spring / Java</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Exceptions_Granted__c</fullName>
        <formula>Account.Support_Exceptions_Granted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Exceptions Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Exceptions_Rejected__c</fullName>
        <formula>Account.Support_Exceptions_Rejected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Exceptions Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Master_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Traction's De-dupe Project</description>
        <label>Temp Master Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Wave_ID__c</fullName>
        <description>For Traction's De-dupe Project</description>
        <label>Temp Wave ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermsAndConditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Service Cloud Community...contacts should be selecting during registration.</description>
        <label>Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <defaultValue>"America/Los_Angeles"</defaultValue>
        <label>Time zone where you work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
                <value>
                    <fullName>Asia/Kolkata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAA_ID_NUMBER__c</fullName>
        <label>UAA ID NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_ID__c</fullName>
        <label>UAA ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <label>UCID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsersProfile__c</fullName>
        <label>User's Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1</fullName>
                </value>
                <value>
                    <fullName>L2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>3rd Party Vendor Name</description>
        <label>Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for CSRs and/or CEs to document when a contact has been confirmed as a verified support user by a verified contact at the contact's company. Requested by Mette on 10/23 to drive an audit process to ensure support contacts are verified.</description>
        <inlineHelpText>Use this checkbox to signify when a customer contact has been verified as a support user by a designated contact at their company.</inlineHelpText>
        <label>Verified User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Account_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View all Cases for Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora_Future__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zuora Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>marketingSuspendedReason__c</fullName>
        <description>Marketo populated field. Cameron requested add 7/31/2018</description>
        <label>Marketing Suspended Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All_Contacts_Internal</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interact_with_Community__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Portal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interact_with_Community__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Contacts</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_of_My_Account</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enable_Portal_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Contacts of My Account</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_on_My_Account_Portal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enable_Portal_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Contacts on My Account</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Logged_in_user_contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts_Portal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Time_Zone__c</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Logged_in_user_contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Contacts</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>1 - New This Week</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RPS_Pending_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPS_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>wclif</value>
        </filters>
        <label>RPS Pending Contacts</label>
    </listViews>
    <listViews>
        <fullName>X1_My_Customer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>1 - My Customer Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>CON01_Cannot_Edit_Billing_Contacts</fullName>
        <active>false</active>
        <description>This Validation is to block the users from editing the Mailing Address or Email fields on the Contacts associated to Billing Accounts</description>
        <errorConditionFormula>AND(
    Connected_to_Billing_Account__c = true , 
    OR (
        ISCHANGED(Email), 
        ISCHANGED(MailingCity), 
        ISCHANGED(MailingStreet), 
        ISCHANGED(MailingStateCode), 
        ISCHANGED(MailingPostalCode), 
        ISCHANGED(MailingCountry), 
        ISCHANGED(FirstName), 
        ISCHANGED(LastName), 
        ISCHANGED(Contact_Company__c) 
       ), 
       ($Profile.Name != "Pivotal - Business Operations"), 
       ($Profile.Name != "Pivotal - Order Management"),
       ($Profile.Name != "System Administrator")
    )</errorConditionFormula>
        <errorMessage>Contact:This Contact is associated to a Billing Account. Please reach out to your Business manager to make any updates to the Mailing Address or Email[CON01].</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CON02_PreventViewAllUsers_on_PVTLAccount</fullName>
        <active>false</active>
        <description>Do not allow View All Users check box to be checks on the Pivotal Support and House accounts</description>
        <errorConditionFormula>CONTAINS(Account.Name, 'Pivotal Support') &amp;&amp;
View_Account_Cases__c</errorConditionFormula>
        <errorDisplayField>View_Account_Cases__c</errorDisplayField>
        <errorMessage>You cannot set View All Cases access for a Pivotal Support holding account.  [CON02]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_firstname_Required</fullName>
        <active>false</active>
        <description>is used to make first name as required</description>
        <errorConditionFormula>isblank( FirstName )</errorConditionFormula>
        <errorMessage>Please enter first name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_is_read_only_for_Customer_Admin</fullName>
        <active>false</active>
        <description>Customer admin should not be able to update country field on contact</description>
        <errorConditionFormula>AND(
    Id  &lt;&gt; $User.ContactId, 
    CONTAINS( $Profile.Name , "Pivotal - Community Manager"),
    ISCHANGED(MailingCountry)

     
)</errorConditionFormula>
        <errorDisplayField>MailingCountry</errorDisplayField>
        <errorMessage>Country cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
(ISBLANK( Email)),
ISPICKVAL( Best_Method_of_Contact__c,"Email"))</errorConditionFormula>
        <errorMessage>Please enter the Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
(ISBLANK( Phone)), 
ISPICKVAL( Best_Method_of_Contact__c,"Phone"))</errorConditionFormula>
        <errorMessage>Please enter the Phone Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Portal_Permissions_Create_Users_for_Acct</fullName>
        <active>false</active>
        <description>"Add/Manage Users" can only be set to TRUE if "Interact with Community" , "Open Cases for Account" AND "View All Cases for Account" are also TRUE.</description>
        <errorConditionFormula>AND(
   OR(
      AND( NOT(PRIORVALUE(Interact_with_Community__c )) ,Interact_with_Community__c = FALSE),
      Enable_Portal_User__c  = FALSE,
      View_Account_Cases__c = FALSE
      ),
     Customer_Admin__c = TRUE
   )</errorConditionFormula>
        <errorDisplayField>Interact_with_Community__c</errorDisplayField>
        <errorMessage>Contact Validation Error: Portal Permissions "Interact with Community", "Open Cases for Account" AND "View All Cases for Account" must be TRUE to enable "Add/Manage Users".</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Portal_Permissions_Open_Cases_for_Acct</fullName>
        <active>false</active>
        <description>"Open Cases for Account" can only be set to TRUE if "Interact with Community" is also TRUE.</description>
        <errorConditionFormula>AND(
   AND( NOT(PRIORVALUE(Interact_with_Community__c )) ,Interact_with_Community__c = FALSE),
   Enable_Portal_User__c  = TRUE
   )</errorConditionFormula>
        <errorDisplayField>Interact_with_Community__c</errorDisplayField>
        <errorMessage>Contact Validation Error: Portal Permissions "Interact with Community" must be TRUE to enable "Open Cases for Account".</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Portal_Permissions_ViewAll_Cases_4_Acct</fullName>
        <active>false</active>
        <description>"View All Cases for Account" can only be set to TRUE if "Interact with Community" and "Open Cases for Account" is also TRUE.</description>
        <errorConditionFormula>AND(
   OR(
      AND( NOT(PRIORVALUE(Interact_with_Community__c )) ,Interact_with_Community__c = FALSE),
      Enable_Portal_User__c  = FALSE
      ),
    View_Account_Cases__c = TRUE
   )</errorConditionFormula>
        <errorDisplayField>Interact_with_Community__c</errorDisplayField>
        <errorMessage>Contact Validation Error: Portal Permissions "Interact with Community" AND "Open Cases for Account" must be TRUE to enable "View All Cases for Account".</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RegisteredUser_Cannot_Be_Customer_Admin</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Customer_Admin__c,Account.Name =='RegisteredUser')</errorConditionFormula>
        <errorMessage>Registered user cannot become a customer Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Registered_Users_Update_Email</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(Email),
NOT(CONTAINS( $Profile.Name , "System Administrator")),
Interact_with_Community__c 
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Email Address cannot be updated. Please Contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_On_Country</fullName>
        <active>true</active>
        <description>Country Field is mandatory when creating or updating a contact if the Contact is created by a Support Profile (CSR, CE, Support Bus Ops)</description>
        <errorConditionFormula>AND(
     ISBLANK(MailingCountry),
      $Profile.Id   =  "00e0P000000Fc9z"  || $Profile.Id   = "00e0P000000Fc9y"  || $Profile.Id   = "00e0P000000FcA0"
)</errorConditionFormula>
        <errorMessage>Mailing Country/Mailing Country Code is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>View_All_Cases_for_Pivotal_Accounts</fullName>
        <active>true</active>
        <description>"View All Cases for Account" cannot be set to true for any "Pivotal" Accounts.</description>
        <errorConditionFormula>AND( NOT(PRIORVALUE(View_Account_Cases__c )) ,View_Account_Cases__c = TRUE,CONTAINS(Account.Name, 'Pivotal'))</errorConditionFormula>
        <errorDisplayField>View_Account_Cases__c</errorDisplayField>
        <errorMessage>"View All Cases for Account" cannot be set to true for any "Pivotal" Accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inactive_business_hours</fullName>
        <active>false</active>
        <description>This validation rule is used to check business hours is active</description>
        <errorConditionFormula>BusinessHours__r.IsActive ==false</errorConditionFormula>
        <errorDisplayField>BusinessHours__c</errorDisplayField>
        <errorMessage>please select active Businesshours</errorMessage>
    </validationRules>
</CustomObject>